--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <!--默认主调背景色-->
+    <color name="colorPrimaryDefault">#FFFFFF</color>
+    <!--深暗主调背景色-->
+    <color name="colorPrimaryDark">#000000</color>
+    <!--深暗主调背景色下的字体颜色-->
+    <color name="colorTextInPrimaryDark">#FFFFFF</color>
+    <!--高亮主调背景色-->
+    <color name="colorPrimaryLight">#FFFFFF</color>
+    <!--强调色-->
+    <color name="colorAccent">#FFC107</color>
+    <!--主级字体颜色-->
+    <color name="colorTextPrimary">#212121</color>
+    <!--次级字体颜色-->
+    <color name="colorTextSecondary">#757575</color>
+    <!--分隔线颜色-->
+    <color name="colorDivider">#BDBDBD</color>
+    <!--波纹颜色-->
+    <color name="colorControlHighlight">#45ffc107</color>
 </resources>
