RecyclerView使用（含item点击波纹）

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,10 @@
 
     <include layout="@layout/toolbar" />
 
-    <ListView
-        android:id="@+id/mainMenuLv"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/mainMenuRv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
 </android.support.design.widget.CoordinatorLayout>
