--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tvMenu"
+    android:clickable="true"
+    android:background="?android:attr/selectableItemBackground"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
-    android:layout_marginBottom="8dp"
-    android:layout_marginTop="8dp"
+    android:layout_height="64dp"
+    android:paddingBottom="8dp"
+    android:paddingTop="8dp"
     android:gravity="center_vertical|left"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
