--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,10 @@
         <item name="android:textColor">@color/colorAccent</item>
     </style>
 
+
+
+    <!--TextInputLayout-->
+    <style name="MyOverflowText" parent="TextAppearance.AppCompat.Small">
+        <item name="android:textColor">#ff0000</item>
+    </style>
 </resources>
