--- a/app/src/main/res/layout/activity_shared_preferences.xml
+++ b/app/src/main/res/layout/activity_shared_preferences.xml
@@ -42,4 +42,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="获取保存到SharedPreferences" />
+
+    <Button
+        android:id="@+id/btnReset"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="重置" />
 </LinearLayout>
