--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -6,10 +6,13 @@
     android:orientation="vertical"
     tools:context="com.example.aaron.androiddesign_kotlin.activity.FragmentActivity">
 
+    <include layout="@layout/toolbar" />
+
     <TextView
         android:id="@+id/tvText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="我是activity的TextView"
         android:textSize="20sp"
         android:textStyle="bold" />
