RecyclerView 瀑布流布局OffsetDecoration，Item之间的间隔、Toolbar menu 创建的2种方式、fitsSystemWindows应用、

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDefault">#FFFFFF</color>
     <!--深暗主调背景色-->
     <color name="colorPrimaryDark">#000000</color>
+    <color name="colorPrimaryDarkTransparent">#55000000</color>
     <!--深暗主调背景色下的字体颜色-->
     <color name="colorTextInPrimaryDark">#FFFFFF</color>
     <!--高亮主调背景色-->
