--- a/app/src/main/res/layout/item_toolbar.xml
+++ b/app/src/main/res/layout/item_toolbar.xml
@@ -3,10 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
     android:background="?android:attr/selectableItemBackground"
     app:cardBackgroundColor="@color/colorTextInPrimaryDark"
-    app:cardCornerRadius="4dp"
+    app:cardCornerRadius="2dp"
     app:cardElevation="4dp"
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="false">
@@ -14,7 +13,7 @@
     <TextView
         android:id="@+id/tvText"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:text="1" />
 </android.support.v7.widget.CardView>
