--- a/app/src/main/res/menu/menu_toolbar_activity.xml
+++ b/app/src/main/res/menu/menu_toolbar_activity.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_rv_linear2"
-        android:title="选项" />
-    <item
-        android:id="@+id/menu_rv_grid"
-        android:title="退出" />
+        android:id="@+id/sign_out"
+        app:showAsAction="never"
+        android:title="sign out" />
 </menu>
