1.Toolbar样式设计 2.com.zhy:autolayout，自适配插件集成 3.vectorDrawables.useSupportLibrary = true//低版本使用需要配置此项，引入过矢量绘图支持在构建时生成PNG图像

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,4 +22,13 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+
+    <dimen name="title">80px</dimen>
+    <dimen name="content">50px</dimen>
+    <dimen name="dp16">48px</dimen>
+    <dimen name="dp8">24px</dimen>
+    <dimen name="dp5">15px</dimen>
+    <dimen name="dp4">12px</dimen>
+    <dimen name="dp1">3px</dimen>
 </resources>
