ViewPager+FragmentPagerAdapter，启动页面，滚动效果

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,11 @@
     <color name="colorDivider">#BDBDBD</color>
     <!--波纹颜色-->
     <color name="colorControlHighlight">#45ffc107</color>
+
+
+    <!-- dots active colors -->
+    <color name="dot_light_screen1">#f98da5</color>
+    <color name="dot_light_screen2">#8cf9eb</color>
+    <color name="dot_light_screen3">#93c6fd</color>
+    <color name="dot_light_screen4">#e4b5fc</color>
 </resources>
