夜间模式 https://developer.android.com/reference/android/support/v7/app/AppCompatDelegate.html AppCompatDelegate.setDefaultNightMode(AppCompatDelegate.MODE_NIGHT_YES) AppCompatDelegate.setDefaultNightMode(AppCompatDelegate.MODE_NIGHT_NO)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,10 @@
     <!--波纹颜色-->
     <color name="colorControlHighlight">#45ffc107</color>
 
+    <!--Toolbar颜色-->
+    <color name="colorTextToolbarTitle">#212121</color>
+    <color name="colorTextToolbarSubTitle">#757575</color>
+
 
     <!-- dots active colors -->
     <color name="dot_light_screen1">#f98da5</color>
